contrast correction

--- a/style.css
+++ b/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .maintitlecolor {
-color: #F49F80!important;
+color: #F6A688!important;
 }
 
 
